Fix overflows: remove max-height restriction from main gridify wrapper

--- a/src/client/css/grid-additions.css
+++ b/src/client/css/grid-additions.css
@@ -112,7 +112,6 @@ main.gridify-wrapper {
   padding: 0;
   max-width: none;
   width: auto;
-  max-height: 92px;
 }
 
 .gridify-wrapper .top-right-icons {
